# fastapi-monitor

./: .coverage  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml
examples/: example_app.py  example_with_auth.py  example_with_themes.py
fastapi_monitor/: __init__.py  auth.py  dashboard.py  database.py  middleware.py
fastapi_monitor/static/css/: base.css  components.css  dashboard.css  main.css  themes.css  tokens.css
fastapi_monitor/static/js/: dashboard.js
fastapi_monitor/static/js/components/: DashboardController.js  ThemeManager.js
fastapi_monitor/static/js/core/: EventEmitter.js
fastapi_monitor/templates/: analytics.html  dashboard.html
fastapi_monitor/templates/partials/: pagination.html  requests.html  requests_rows.html  stats.html
tests/: test_auth.py  test_dashboard.py  test_dashboard_units.py  test_database.py  test_frontend.py  test_frontend_extended.py  test_integration.py  test_middleware.py
