[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-monitor"
version = "0.1.0"
description = "FastAPI monitoring middleware with dashboard"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn[standard]>=0.15.0",
    "jinja2>=3.0.0",
    "aiofiles>=0.7.0",
    "aiosqlite>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.18.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/fastapi-monitor"
Repository = "https://github.com/yourusername/fastapi-monitor"
