[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-monitor"
version = "0.1.0"
description = "FastAPI monitoring middleware with dashboard"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn[standard]>=0.15.0",
    "jinja2>=3.0.0",
    "aiofiles>=0.7.0",
    "aiosqlite>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.18.0",
    "httpx>=0.24.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "coverage>=7.0.0",
    "playwright>=1.40.0",
    "pytest-playwright>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/neriyabl/fastapi-monitor"
Repository = "https://github.com/neriyabl/fastapi-monitor"

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["fastapi_monitor"]
