[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-monitor"
version = "0.1.1"
description = "A lightweight monitoring middleware for FastAPI applications with real-time dashboard"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Neriya Bar-Lev", email = "neriyabl555@gmail.com"}
]
keywords = ["fastapi", "monitoring", "middleware", "dashboard", "metrics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi>=0.68.0",
    "aiosqlite>=0.17.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio",
    "black",
    "isort",
    "httpx",
]

[project.urls]
Homepage = "https://github.com/neriyabl/fastapi-monitor"
Repository = "https://github.com/neriyabl/fastapi-monitor"
Issues = "https://github.com/neriyabl/fastapi-monitor/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["fastapi_monitor*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
